Solventando problemas de pom, y agregando dependencias necesarias, además actualizando la version de spring y configurando para java 14